--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,34 @@
-/* font-family: "Playfair Display", serif;
-font-family: "Poppins", sans-serif;
+.hero {
+  text-align: center;
+  background-color: #f9f7fe;
+  padding: 160px 0;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
+  font-size: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
+}
+
+.hero h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+}
+
+.btn-branding {
+  background: #6c63ff;
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+}
