--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
 
 p {
   font-family: "Poppins", sans-serif;
-  font-size: normal;
+  font-weight: normal;
+  font-size: 16px;
 }
 
 h1,
@@ -19,6 +20,10 @@ h6 {
   font-weight: bold;
 }
 
+h2 {
+  font-size: 64px;
+}
+
 .hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -26,9 +31,21 @@ h6 {
 }
 
 .btn-branding {
-  background: #6c63ff;
+  background: #bb2d3b;
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+  .project-description {
+    padding: none;
+    text-align: center;
+  }
 }
