--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,32 @@ h2 {
   padding: 120px 60px;
 }
 
+.content {
+  padding: 160px 50px;
+}
+
+.content h1 {
+  font-size: 64px;
+}
+
+.content h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+}
+
+.content h3 {
+  font-size: 24px;
+  font-family: "Poppins", sans-serif;
+}
+
+.content {
+  margin: 30px;
+}
+
+.profile-pic {
+  border-radius: 30px;
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 60px;
@@ -50,5 +76,10 @@ h2 {
   .project-description {
     padding: none;
     text-align: center;
+  }
+
+  .content {
+    text-align: center;
+    padding: 0;
   }
 }
