--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,40 @@ h2 {
   font-size: 64px;
 }
 
+.logo {
+  max-width: 120px;
+}
+
+nav {
+  padding: 30px 50px;
+}
+
+nav ul {
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 100px;
+  margin-left: 15px;
+}
+
+nav li.active a {
+  color: black;
+}
+
+nav a {
+  text-decoration: none;
+  color: #bb2d3b;
+  font-weight: bold;
+}
+
+nav a :hover {
+  color: #bb2d3b;
+  transition: all 150ms ease-in-out;
+}
+
 .hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
